--- a/duck.html
+++ b/duck.html
@@ -26,7 +26,7 @@
 			}
 		body {
 			background-color: white;
-			font-family: Arial;
+			font-family: InterTight;
 			font-size: 1.1rem;
 		}
 		.container {
@@ -39,7 +39,7 @@
 		.dash {
 						display: inline-block;
 			width: 2rem
-			font-family: Arial;
+			font-family: InterTight;
 			font-weight: bold;
 			font-size: 3rem;
 			margin-top: 0rem;
@@ -122,14 +122,14 @@
 				justify-content: space-between;
 				align-items: center;
 				margin-bottom: 8px;
-				font-family: Arial, sans-serif;
+				font-family: InterTight, sans-serif;
 			}
 
 			.popup-header h2 {
 				margin: 0;
 				font-size: 20px;
 				color: #1dc278;
-				font-family: Arial, sans-serif;
+				font-family: InterTight, sans-serif;
 			}
 
 			.popup-close {
@@ -138,14 +138,14 @@
 				font-size: 24px;
 				cursor: pointer;
 				color: #f03a17;
-				font-family: Arial, sans-serif;
+				font-family: InterTight, sans-serif;
 			}
 
 			.popup-content {
 				margin: 0;
 				font-size: 18px;
 				line-height: 1.5;
-				font-family: Arial, sans-serif;
+				font-family: InterTight, sans-serif;
 			}
 			
 			.toolbar-info {
@@ -183,14 +183,14 @@
 				justify-content: space-between;
 				align-items: center;
 				margin-bottom: 8px;
-				font-family: Arial, sans-serif;
+				font-family: InterTight, sans-serif;
 			}
 
 			.popup2-header h2 {
 				margin: 0;
 				font-size: 20px;
 				color: #1dc278;
-				font-family: Arial, sans-serif;
+				font-family: InterTight, sans-serif;
 			}
 
 			.popup2-close {
@@ -199,14 +199,14 @@
 				font-size: 24px;
 				cursor: pointer;
 				color: #f03a17;
-				font-family: Arial, sans-serif;
+				font-family: InterTight, sans-serif;
 			}
 
 			.popup2-content {
 				margin: 0;
 				font-size: 18px;
 				line-height: 1.5;
-				font-family: Arial, sans-serif;
+				font-family: InterTight, sans-serif;
 			}
 		
 .share-button {
@@ -218,7 +218,7 @@
   cursor: pointer;
   font-size: 16px;
   font-weight: bold;
-  font-family: Arial, sans-serif;
+  font-family: InterTight, sans-serif;
   margin-right: 10px;
   height: 40px;
 }
