--- a/bowled.html
+++ b/bowled.html
@@ -10,6 +10,11 @@
   <meta name="keywords" content="Wordle, cricket, Crickdle, quiz, game, sport, bowler, batsman">
   <meta name="author" content="Ayush Sanghavi">
 	<style>
+	   @font-face {
+  font-family: InterTight;
+  src: url(InterTight-VariableFont_wght.ttf);
+}
+	
 		html {
 				box-sizing: border-box;
 				font-size: 16px;
