--- a/bowled.html
+++ b/bowled.html
@@ -254,6 +254,10 @@
 				padding-top: 0.1rem;
 				padding-bottom: 0.4rem;
 				margin-bottom: 1.5rem;
+				}
+				
+				.game-container dash {
+					font-family: Arial, sans-serif
 }
 	</style>
 </head>
@@ -296,10 +300,12 @@
 		<p class="text-large">Bowled 'em!</p>
 		<img src="bowled.png" alt="A ball ripping through a set of stumps">
 		<br>
+			 <div class="dash-container">
 		<span class="dash" id="dash1">●</span>
 		<span class="dash" id="dash2">●</span>
 		<span class="dash" id="dash3">●</span>
 		<span class="dash" id="dash4">●</span>
+		</div>
 		</div>
 		<p><b>You got today's Crickdle.</b></p>
 		<p>Come back tomorrow to guess another cricketer.</p>
