--- a/bowled.html
+++ b/bowled.html
@@ -256,8 +256,8 @@
 				margin-bottom: 1.5rem;
 				}
 				
-				.game-container dash {
-					font-family: Arial, sans-serif
+				.game-container p {
+					font-family: Arial, sans-serif;
 }
 	</style>
 </head>
