--- a/bowled.html
+++ b/bowled.html
@@ -44,7 +44,7 @@
 		.dash {
 			display: inline-block;
 			width: 2rem
-			font-family: InterTight;
+			font-family: Arial;
 			font-weight: bold;
 			font-size: 3rem;
 			margin-top: 0rem;
@@ -255,10 +255,6 @@
 				padding-bottom: 0.4rem;
 				margin-bottom: 1.5rem;
 				}
-				
-				.game-container p {
-					font-family: Arial, sans-serif;
-}
 	</style>
 </head>
 	<header>
@@ -300,12 +296,10 @@
 		<p class="text-large">Bowled 'em!</p>
 		<img src="bowled.png" alt="A ball ripping through a set of stumps">
 		<br>
-			 <div class="dash-container">
 		<span class="dash" id="dash1">●</span>
 		<span class="dash" id="dash2">●</span>
 		<span class="dash" id="dash3">●</span>
 		<span class="dash" id="dash4">●</span>
-		</div>
 		</div>
 		<p><b>You got today's Crickdle.</b></p>
 		<p>Come back tomorrow to guess another cricketer.</p>
