--- a/duck.html
+++ b/duck.html
@@ -44,7 +44,7 @@
 		.dash {
 						display: inline-block;
 			width: 2rem
-			font-family: InterTight;
+			font-family: Arial;
 			font-weight: bold;
 			font-size: 3rem;
 			margin-top: 0rem;
