--- a/bowled.html
+++ b/bowled.html
@@ -43,10 +43,9 @@
 		}
 		.dash {
 			display: inline-block;
-			width: 2rem
-			font-family: Arial;
+			width: 2rem;
 			font-weight: bold;
-			font-size: 3rem;
+			font-size: 1.5rem;
 			margin-top: 0rem;
 			margin-bottom: 0.5rem;
 		}
