--- a/duck.html
+++ b/duck.html
@@ -43,7 +43,7 @@
 		}
 		.dash {
 						display: inline-block;
-			width: 2rem
+			width: 2rem;
 			font-weight: bold;
 			font-size: 1.5rem;
 			margin-top: 0rem;
