--- a/bowled.html
+++ b/bowled.html
@@ -50,6 +50,7 @@
 		}
 		.text-large {
 			font-size: 1.4rem;
+			font-weight: 600;
 		}
 		.toolbar {
 				background-color: #f7f7f7;
@@ -236,7 +237,7 @@
 		
 		 img {
 		margin-bottom: 1rem;
-			 margin-top: 1rem;
+			 margin-top: 0.6rem;
         width: 10rem;
       }
 						
