--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
     </div>
 		<div id="guess-section">
         <div class="game-container">
-		<span style="font-weight: 500"><h2>Which <span id="crickdlequestion"></span></h2></span>
+		<h2><span style="font-weight: 500">Which <span id="crickdlequestion"></span></span></h2>
 			<div class="guess-input">
 				<input type="text" id="guess1" />
 				<button id="submit1"><b>&rArr;</b></button>
