--- a/index.html
+++ b/index.html
@@ -395,18 +395,18 @@
 			<div class="popup-background">
 				<div class="popup">
 					<div class="popup-header">
-						<h2>HOW TO PLAY</h2>
+						<h2><span style="font-weight: 500">HOW TO PLAY</span></h2>
 						<button class="popup-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup-content">
-						<p>Based on their stats in this game, guess the cricketer who was 'Player of the Match'. You have 4 tries.<br><ul><li>Each guess should be the <b>surname</b> of the player you're guessing.</li><li>The colour of the box will change to show how close your guess is.</li></ul>If you misspell the name, the box will turn <span style="color: #e4a404"><b>orange</b></span>, and if you get it wrong, the box will turn <span style="color: #787c7f"><b>grey</b></span>.</p>
+						<p>Based on their stats in this game, guess the cricketer who was 'Player of the Match'. You have 4 tries.<br><ul><li>Each guess should be the <span style="font-weight: 500">surname</span> of the player you're guessing.</li><li>The colour of the box will change to show how close your guess is.</li></ul>If you misspell the name, the box will turn <span style="color: #e4a404"><span style="font-weight: 500">orange</span></span>, and if you get it wrong, the box will turn <span style="color: #787c7f"><span style="font-weight: 500">grey</span></span>.</p>
 					</div>
 				</div>
 			</div>
 			<div class="popup2-background">
 				<div class="popup2">
 					<div class="popup2-header">
-						<h2>ABOUT</h2>
+						<h2><span style="font-weight: 500">ABOUT</span></h2>
 						<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup2-content">
@@ -425,19 +425,19 @@
 		<h2><span style="font-weight: 500">Which <span id="crickdlequestion"></span></span></h2>
 			<div class="guess-input">
 				<input type="text" id="guess1" />
-				<button id="submit1"><b>&rArr;</b></button>
+				<button id="submit1"><span style="font-weight: 500">&rArr;</span></button>
 			</div>
 			<div class="guess-input">
 				<input type="text" id="guess2" disabled />
-				<button id="submit2" disabled><b>&rArr;</b></button>
+				<button id="submit2" disabled><span style="font-weight: 500">&rArr;</span></button>
 			</div>
 			<div class="guess-input">
 				<input type="text" id="guess3" disabled />
-				<button id="submit3" disabled><b>&rArr;</b></button>
+				<button id="submit3" disabled><span style="font-weight: 500">&rArr;</span></button>
 			</div>
 			<div class="guess-input">
 				<input type="text" id="guess4" disabled />
-				<button id="submit4" disabled><b>&rArr;</b></button>
+				<button id="submit4" disabled><span style="font-weight: 500">&rArr;</span></button>
 			</div>
       </div>
       <div class="share-container">
