--- a/bowled.html
+++ b/bowled.html
@@ -267,18 +267,18 @@
 			<div class="popup-background">
 				<div class="popup">
 					<div class="popup-header">
-						<h2>HOW TO PLAY</h2>
+						<h2><span style="font-weight: 500">HOW TO PLAY</span></h2>
 						<button class="popup-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup-content">
-						<p>Based on their stats in this game, guess the cricketer who was 'Player of the Match'. You have 4 tries.<br><ul><li>Each guess should be the <b>surname</b> of the player you're guessing.</li><li>The colour of the box will change to show how close your guess is.</li></ul>If you misspell the name, the box will turn <span style="color: #e4a404"><b>orange</b></span>, and if you get it wrong, the box will turn <span style="color: #787c7f"><b>grey</b></span>.</p>
+						<p>Based on their stats in this game, guess the cricketer who was 'Player of the Match'. You have 4 tries.<br><ul><li>Each guess should be the <span style="font-weight: 500">surname</span> of the player you're guessing.</li><li>The colour of the box will change to show how close your guess is.</li></ul>If you misspell the name, the box will turn <span style="color: #e4a404"><span style="font-weight: 500">orange</span></span>, and if you get it wrong, the box will turn <span style="color: #787c7f"><span style="font-weight: 500">grey</span></span>.</p>
 					</div>
 				</div>
 			</div>
 			<div class="popup2-background">
 				<div class="popup2">
 					<div class="popup2-header">
-						<h2>ABOUT</h2>
+						<h2><span style="font-weight: 500">ABOUT</span></h2>
 						<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup2-content">
@@ -298,7 +298,7 @@
 		<span class="dash" id="dash3">●</span>
 		<span class="dash" id="dash4">●</span>
 		</div>
-		<p><b>You got today's Crickdle.</b></p>
+		<p><span style="font-weight: 500">You got today's Crickdle.</span></p>
 		<p>Come back tomorrow to guess another cricketer.</p>
         <button class="share-button">SHARE</button>
 		<p>Next Crickdle in <span id="countdown"></span></p>
