--- a/duck.html
+++ b/duck.html
@@ -45,11 +45,13 @@
 						display: inline-block;
 			width: 2rem;
 			font-weight: bold;
-			font-size: 2rem;
+			font-size: 1.8rem;
 			margin-bottom: 1rem;
 		}
 		.text-large {
 			font-size: 1.4rem;
+			font-weight: 500;
+			margin-bottom: 0;
 		}
 		.toolbar {
 				background-color: #f7f7f7;
@@ -218,7 +220,7 @@
   border-radius: 4px;
   cursor: pointer;
   font-size: 16px;
-  font-weight: bold;
+  font-weight: 500;
   font-family: InterTight, sans-serif;
   margin-right: 10px;
   height: 40px;
