--- a/index.html
+++ b/index.html
@@ -448,14 +448,14 @@
 		</div>
 		<script>
 			const gameDetails = {
-				nation1: "New Zealand",
-				nation2: "Sri Lanka",
-				date: "Dec 18-21, 2015",
-				score: "Sri Lanka 292 & 133, New Zealand (T: 189) 237 & 189/5; New Zealand won by 5 wickets",
-				crickdlequestion: "New Zealand player scored 108* in this match?"
+				nation1: "England",
+				nation2: "Australia",
+				date: "Jul 16-20, 2009",
+				score: "England 425 & 311/6d, Australia (T: 522) 215 & 406; England won by 115 runs",
+				crickdlequestion: "England player scored 30* and took 1/27 & 5/92 in this match?"
 			};
 
-			const correctPlayer = ["WILLIAMSON"];
+			const correctPlayer = ["FLINTOFF"];
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
