--- a/index.html
+++ b/index.html
@@ -476,8 +476,7 @@
 				const warningPopup = document.createElement("div");
 				warningPopup.innerHTML = "Not enough letters!";
 				warningPopup.style.position = "absolute";
-			warningPopup.style.bottom = "30px";
-				warningPopup.style.top = "0";
+				warningPopup.style.top = "30px";
 				warningPopup.style.left = "50%";
 				warningPopup.style.transform = "translateX(-50%)";
 				warningPopup.style.padding = "0.3rem";
