--- a/index.html
+++ b/index.html
@@ -10,38 +10,31 @@
 
   gtag('config', 'G-F1WGM1SC5E');
 </script>
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-F1WGM1SC5E"></script>
+<!-- Google Analytics opt-out -->
+<script>
+  function gaOptout() {
+    document.cookie = 'ga-disable-G-F1WGM1SC5E=true; expires=Thu, 31 Dec 2099 23:59:59 UTC; path=/';
+    window['ga-disable-G-F1WGM1SC5E'] = true;
+    alert('Google Analytics has been disabled for this website.');
+  }
+</script>
+
+<!-- Google Analytics tracking code -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F1WGM1SC5E"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  // User consent for Google Analytics
-  function userConsent() {
-    gtag('consent', 'update', {
-      'analytics_storage': 'granted'
-    });
-  }
+  // Check if user has given consent
+  var hasConsent = (localStorage.getItem('gaConsent') === 'true');
 
-  // Check user consent
-  var hasUserConsent = (localStorage.getItem('ga_consent') == 'true');
-
-  // Load Google Analytics if user has consented
-  if (hasUserConsent) {
-    userConsent();
+  if (hasConsent) {
+    // User has given consent, enable tracking
     gtag('config', 'G-F1WGM1SC5E');
-  }
-
-  // Show consent message
-  function showConsentMessage() {
-    var message = document.createElement('div');
-    message.innerHTML = 'We use cookies to enhance your experience. <button onclick="userConsent(); localStorage.setItem(\'ga_consent\', \'true\'); this.parentNode.parentNode.removeChild(this.parentNode);">I consent</button>';
-    document.body.appendChild(message);
-  }
-
-  // Check if user has previously given consent
-  if (!hasUserConsent) {
-    showConsentMessage();
+  } else {
+    // User has not given consent, disable tracking
+    window['ga-disable-G-F1WGM1SC5E'] = true;
   }
 </script>
 		<script type="application/ld+json">
@@ -425,6 +418,12 @@
 		</style>
 	</head>
 	<body>
+		<!-- User consent request -->
+<div id="cookieConsent" style="display:none;">
+  <p>We use Google Analytics to analyze traffic to our site. We do not collect personally identifiable information. If you agree to our use of cookies and Google Analytics, please click "I agree". If you do not agree, you can disable cookies and Google Analytics in your web browser's settings.</p>
+  <button onclick="localStorage.setItem('gaConsent', 'true'); document.getElementById('cookieConsent').style.display = 'none';">I agree</button>
+  <button onclick="gaOptout(); localStorage.setItem('gaConsent', 'false'); document.getElementById('cookieConsent').style.display = 'none';">Disable Google Analytics</button>
+</div>
 		<header>
 			<div class="toolbar">
 					<button class="toolbar-info" aria-label="About">
@@ -609,12 +608,17 @@
 			const helpButton = document.querySelector('.toolbar-help');
 			const popupBackground = document.querySelector('.popup-background');
 			const popupCloseButton = document.querySelector('.popup-close');
-			const hasShownInstructions = localStorage.getItem('hasShownInstructions');
+			
+			const hasConsent = (localStorage.getItem('gaConsent') === 'true');
 
-			if (!hasShownInstructions) {
-				popupBackground.style.display = 'flex';
-				localStorage.setItem('hasShownInstructions', 'true');
-			}
+if (hasConsent) {
+  const hasShownInstructions = localStorage.getItem('hasShownInstructions');
+
+  if (!hasShownInstructions) {
+    popupBackground.style.display = 'flex';
+    localStorage.setItem('hasShownInstructions', 'true');
+  }
+}
 
 			helpButton.addEventListener('click', function() {
 				popupBackground.style.display = 'flex';
