--- a/index.html
+++ b/index.html
@@ -1,96 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<!-- User consent request for Google Analytics -->
-<script>
-  function setCookie(name, value, days) {
-    var expires = "";
-    if (days) {
-      var date = new Date();
-      date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
-      expires = "; expires=" + date.toUTCString();
-    }
-    document.cookie = name + "=" + (value || "") + expires + "; path=/";
-  }
-  
-  function getCookie(name) {
-    var nameEQ = name + "=";
-    var ca = document.cookie.split(';');
-    for(var i=0;i < ca.length;i++) {
-      var c = ca[i];
-      while (c.charAt(0)==' ') c = c.substring(1,c.length);
-      if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length);
-    }
-    return null;
-  }
-  
-  function eraseCookie(name) {   
-    document.cookie = name+'=; Max-Age=-99999999;';  
+		<script>
+  function askConsent() {
+    // create a consent banner
+    const consentBanner = document.createElement('div');
+    consentBanner.id = 'consent-banner';
+    consentBanner.innerHTML = `
+      <p>We use cookies to improve your experience on our website. By clicking "I accept" you consent to the use of these cookies.</p>
+      <button onclick="acceptConsent()">I accept</button>
+      <button onclick="rejectConsent()">No thanks</button>
+    `;
+    document.body.appendChild(consentBanner);
   }
 
-function askForConsent() {
-  var consent = getCookie('google-analytics-consent');
-  if (consent != 'yes') {
-    var popup = document.createElement('div');
-    popup.innerHTML = 'We use Google Analytics to collect anonymous statistics about how our website is used. Can we use cookies to enable Google Analytics?';
-    popup.style.position = 'fixed';
-    popup.style.top = '50%';
-    popup.style.left = '50%';
-    popup.style.transform = 'translate(-50%, -50%)';
-    popup.style.padding = '1rem';
-    popup.style.backgroundColor = '#fff';
-    popup.style.color = '#000';
-    popup.style.fontSize = '1rem';
-    popup.style.textAlign = 'center';
-    popup.style.borderRadius = '5px';
-    popup.style.boxShadow = '0px 4px 8px rgba(0, 0, 0, 0.2)';
-    popup.style.zIndex = '9999';
+  function acceptConsent() {
+    // set a cookie to record user's consent
+    document.cookie = 'ga_consent=true; expires=Thu, 31 Dec 2099 23:59:59 GMT; path=/';
 
-   var acceptButton = document.createElement('button');
-acceptButton.innerText = 'Yes';
-acceptButton.style.backgroundColor = '#008CBA';
-acceptButton.style.color = '#fff';
-acceptButton.style.borderRadius = '5px';
-acceptButton.style.padding = '0.5rem';
-acceptButton.style.marginRight = '1rem';
-acceptButton.addEventListener('click', function() {
-  setCookie('google-analytics-consent', 'yes', 365);
-  loadAnalytics();
-  document.body.removeChild(popup);
-});
+    // load Google Analytics script
+    const gtagScript = document.createElement('script');
+    gtagScript.src = 'https://www.googletagmanager.com/gtag/js?id=G-F1WGM1SC5E';
+    gtagScript.async = true;
+    document.head.appendChild(gtagScript);
 
-    var cancelButton = document.createElement('button');
-    cancelButton.innerText = 'No';
-    cancelButton.style.backgroundColor = '#f44336';
-    cancelButton.style.color = '#fff';
-    cancelButton.style.borderRadius = '5px';
-    cancelButton.style.padding = '0.5rem';
-    cancelButton.addEventListener('click', function() {
-      setCookie('google-analytics-consent', 'no', 365);
-      document.body.removeChild(popup);
-    });
-
-    var buttonWrapper = document.createElement('div');
-    buttonWrapper.appendChild(acceptButton);
-    buttonWrapper.appendChild(cancelButton);
-
-    popup.appendChild(buttonWrapper);
-
-    document.body.appendChild(popup);
-  } else {
-    loadAnalytics();
-  }
-}
-
-  function loadAnalytics() {
-    // Your Google Analytics tag
+    // initialize Google Analytics
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     gtag('config', 'G-F1WGM1SC5E');
+
+    // remove the consent banner
+    const consentBanner = document.getElementById('consent-banner');
+    consentBanner.parentNode.removeChild(consentBanner);
   }
-  
-  askForConsent();
+
+  function rejectConsent() {
+    // remove the consent banner
+    const consentBanner = document.getElementById('consent-banner');
+    consentBanner.parentNode.removeChild(consentBanner);
+  }
+
+  // check if user has given consent
+  const hasConsent = document.cookie.split('; ').find(row => row.startsWith('ga_consent=')).split('=')[1] === 'true';
+
+  if (!hasConsent) {
+    askConsent();
+  }
 </script>
 		<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-F1WGM1SC5E"></script>
@@ -666,15 +622,25 @@ acceptButton.addEventListener('click', function() {
 			const helpButton = document.querySelector('.toolbar-help');
 			const popupBackground = document.querySelector('.popup-background');
 			const popupCloseButton = document.querySelector('.popup-close');
-const hasShownInstructions = localStorage.getItem('hasShownInstructions');
 
-if (!hasShownInstructions) {
-  var consent = getCookie('google-analytics-consent');
-  if (consent == 'yes' || consent == null) {
-    popupBackground.style.display = 'flex';
-    localStorage.setItem('hasShownInstructions', 'true');
+  const hasShownInstructions = localStorage.getItem('hasShownInstructions');
+
+  if (!hasShownInstructions) {
+    const consent = getCookie('ga_consent');
+    if (consent === 'true' || consent === null) {
+      const popupBackground = document.getElementById('popup-background');
+      popupBackground.style.display = 'flex';
+      localStorage.setItem('hasShownInstructions', 'true');
+    }
   }
-}
+
+  function getCookie(name) {
+    const value = '; ' + document.cookie;
+    const parts = value.split('; ' + name + '=');
+    if (parts.length === 2) {
+      return parts.pop().split(';').shift();
+    }
+  }
 
 			helpButton.addEventListener('click', function() {
 				popupBackground.style.display = 'flex';
