--- a/index.html
+++ b/index.html
@@ -449,15 +449,15 @@
 		</div>
 		<script>
 			const gameDetails = {
-				nation1: "England",
-				nation2: "Australia",
-				date: "Jul 16-20, 2009",
-				venue: "Lord's",
-				score: "England 425 & 311/6d, Australia (T: 522) 215 & 406; England won by 115 runs",
-				crickdlequestion: "England player scored 30* and took 1/27 & 5/92 in this match?"
+				nation1: "Australia",
+				nation2: "India",
+				date: "Dec 26-30, 2003",
+				venue: "Melbourne",
+				score: "India 366 & 286, Australia (T: 95) 558 & 97/1; Australia won by 9 wickets",
+				crickdlequestion: "Australia player scored 257 & 31* in this match?"
 			};
 
-			const correctPlayer = ["FLINTOFF"];
+			const correctPlayer = ["PONTING"];
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
