--- a/index.html
+++ b/index.html
@@ -412,8 +412,7 @@
   padding: 0.5rem 1rem;
   border: none;
   border-radius: 0.25rem;
-  background-color: #fff;
-  color: #28a745;
+  color: #1dc278;
   font-family: 'InterTight', sans-serif;
   font-size: 1rem;
   cursor: pointer;
@@ -433,8 +432,8 @@
 		<header>
 			<div id="cookieConsent" style="display:none;">
   <p>This website uses cookies to analyse traffic. Any data collected is automatically anonymised.</p>
-  <button onclick="acceptCookies()">Accept</button>
-  <button onclick="declineCookies()">Decline</button>
+  <button onclick="acceptCookies()">ACCEPT</button>
+  <button onclick="declineCookies()">DECLINE</button>
 </div>
 			<div class="toolbar">
 					<button class="toolbar-info" aria-label="About">
