--- a/index.html
+++ b/index.html
@@ -413,6 +413,7 @@
   border: none;
   border-radius: 0.25rem;
   color: #1dc278;
+	background-color: none;
   font-family: 'InterTight', sans-serif;
   font-size: 1rem;
   cursor: pointer;
@@ -431,7 +432,7 @@
 	<body>
 		<header>
 			<div id="cookieConsent" style="display:none;">
-  <p>This website uses cookies to analyse traffic. Any data collected is automatically anonymised.</p>
+  <p>This website uses cookies to analyse traffic. .</p>
   <button onclick="acceptCookies()">ACCEPT</button>
   <button onclick="declineCookies()">DECLINE</button>
 </div>
