--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
   border: none;
   border-radius: 0.25rem;
   color: #1dc278;
-	background-color: none;
+	background-color: transparent;
   font-family: 'InterTight', sans-serif;
   font-size: 1rem;
   cursor: pointer;
@@ -432,7 +432,7 @@
 	<body>
 		<header>
 			<div id="cookieConsent" style="display:none;">
-  <p>This website uses cookies to analyse traffic. .</p>
+  <p>We use Google Analytics cookies to better understand how our website is used.</p>
   <button onclick="acceptCookies()">ACCEPT</button>
   <button onclick="declineCookies()">DECLINE</button>
 </div>
