--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@ function declineCookies() {
 			}
             guessInput.disabled = true;
             button.disabled = true;
-		if (guess.split(' ').length > 1) {
+		else if (guess.split(' ').length > 1) {
       const warningPopup = document.createElement("div");
       warningPopup.innerHTML = "Surnames only please!";
 		warningPopup.style.position = "absolute";
