--- a/index.html
+++ b/index.html
@@ -561,10 +561,10 @@ function declineCookies() {
 			}
             guessInput.disabled = true;
             button.disabled = true;
-		else if (guess.split(' ').length > 1) {
-      const warningPopup = document.createElement("div");
-      warningPopup.innerHTML = "Surnames only please!";
-		warningPopup.style.position = "absolute";
+		if (guess.split(' ').length > 1) {
+			const warningPopup = document.createElement("div");
+			warningPopup.innerHTML = "Surnames only please!";
+			warningPopup.style.position = "absolute";
 				warningPopup.style.top = "54px";
 				warningPopup.style.left = "50%";
 				warningPopup.style.transform = "translateX(-50%)";
@@ -580,8 +580,6 @@ function declineCookies() {
 				}, 1500);
 				return;
 			}
-            guessInput.disabled = true;
-            button.disabled = true;
             if (correctPlayer.includes(guess)) {
                 guessInput.style.backgroundColor = "#1dc278";
                 guessInput.style.color = "white";
