--- a/index.html
+++ b/index.html
@@ -559,6 +559,8 @@ function declineCookies() {
 				}, 1500);
 				return;
 			}
+				            guessInput.disabled = true;
+            button.disabled = true;
 		if (guess.split(' ').length > 1) {
 			const warningPopup = document.createElement("div");
 			warningPopup.innerHTML = "Surnames only please!";
@@ -578,6 +580,8 @@ function declineCookies() {
 				}, 1500);
 				return;
 			}
+				            guessInput.disabled = true;
+            button.disabled = true;
             if (correctPlayer.includes(guess)) {
                 guessInput.style.backgroundColor = "#1dc278";
                 guessInput.style.color = "white";
