--- a/index.html
+++ b/index.html
@@ -514,15 +514,15 @@ function declineCookies() {
 }
 			
 			const gameDetails = {
-				nation1: "Australia",
-				nation2: "India",
-				date: "Dec 26-30, 2003",
-				venue: "Melbourne",
-				score: "India 366 & 286, Australia (T: 95) 558 & 97/1; Australia won by 9 wickets",
-				crickdlequestion: "Australia player scored 257 & 31* in this match?"
+				nation1: "Zimbabwe",
+				nation2: "New Zealand",
+				date: "Jul 28-31, 2016",
+				venue: "Bulawayo",
+				score: "Zimbabwe 164 & 295, New Zealand 576/6d; New Zealand won by an innings and 117 runs",
+				crickdlequestion: "New Zealand player scored 173* in this match?"
 			};
 
-			const correctPlayer = ["PONTING"];
+			const correctPlayer = ["TAYLOR"];
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
