--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   gtag('config', 'G-F1WGM1SC5E');
 </script>
+		<link rel=“canonical” href=“https://crickdle.com/” />
 		<script type="application/ld+json">
 {
   "@context": "http://schema.org",
@@ -28,7 +29,7 @@
       <link rel="apple-touch-icon" sizes="60x60" href="favicon.ico.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<meta charset="UTF-8">
-  <meta name="description" content="Crickdle - Daily Cricket Guessing Game | Test Your Cricket Knowledge!">
+  <meta name="description" content="Crickdle - Daily Cricket Guessing Game | Test Your Cricket Knowledge Every Day!">
   <meta name="keywords" content="Wordle, cricket, Crickdle, quiz, game, sport, bowler, batsman">
   <meta name="author" content="Ayush Sanghavi">
 		<style>
