--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<meta charset="UTF-8">
   <meta name="description" content="Crickdle - Daily Cricket Guessing Game | Test Your Cricket Knowledge Every Day!">
-  <meta name="keywords" content="Wordle, cricket, Crickdle, quiz, game, sport, bowler, batsman">
+  <meta name="keywords" content="Wordle, cricket, test, challenge, quiz, game, sport, bowler, batsman, bowled, duck">
   <meta name="author" content="Ayush Sanghavi">
 		<style>
     @font-face {
